--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Connor-Knabe/hue-energy-usage#readme",
   "dependencies": {
     "express": "^4.16.2",
+    "jsonfile": "^4.0.0",
     "log4js": "^2.5.3",
     "node-hue-api": "^2.4.2"
   }
