--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Connor-Knabe/hue-energy-usage#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jsonfile": "^4.0.0",
     "log4js": "^2.5.3",
